[gd_scene load_steps=8 format=2]

[ext_resource path="res://Element.tscn" type="PackedScene" id=1]
[ext_resource path="res://Explosion.gd" type="Script" id=2]
[ext_resource path="res://elements/explosion_01.png" type="Texture" id=3]
[ext_resource path="res://elements/explosion_02.png" type="Texture" id=4]
[ext_resource path="res://elements/explosion_04.png" type="Texture" id=5]
[ext_resource path="res://elements/explosion_03.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "still",
"speed": 5.0
} ]

[node name="Explosion" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="AnimatedSprite" parent="." index="0"]
frames = SubResource( 1 )
animation = "still"

[node name="Explode2" type="Sprite" parent="." index="3"]
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Explode3" type="Sprite" parent="." index="4"]
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="Explode4" type="Sprite" parent="." index="5"]
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
